--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "promise": "^8.0.2"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "http": "0.0.0",
+    "https": "^1.0.0",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "socket.io": "^2.1.1",
     "websocket": "^1.0.28",
