--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.1",
     "mysql": "^2.16.0",
     "socket.io": "^2.1.1",
     "websocket": "^1.0.28",
